# A-Project

./: README.md
background_app/: CMakeLists.txt  background_app.pro  main.cpp
background_app/include/: attendance.h  opencv_face_process.h  socket_server.h  user_db.h  user_mngr.h
background_app/src/: attendance.cpp  opencv_face_process.cpp  socket_server.c  socket_server.cpp  user_db.c  user_mngr.c  user_mngr.cpp
common/: config.ini
common/include/: config.h  image_convert.h  protocol.h  public.h  type.h
common/src/: image_convert.cpp  protocol.c  public.c  ringbuffer.c
foreground_app/: CMakeLists.txt  foreground_app.pro  main.cpp
foreground_app/include/: capture.h  image_convert.h  mainwindow.h  opencv_image_process.h  opencv_test.h  socket_client.h
foreground_app/src/: capture.c  capture.cpp  mainwindow.cpp  opencv_image_process.cpp  opencv_test.cpp  socket_client.c  socket_client.cpp
